--- a/RepositoriesAPIGithub/Base.lproj/Main.storyboard
+++ b/RepositoriesAPIGithub/Base.lproj/Main.storyboard
@@ -36,8 +36,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="85"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rTm-j5-20l">
-                                                    <rect key="frame" x="5" y="12.5" width="60" height="60"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="rTm-j5-20l">
+                                                    <rect key="frame" x="5" y="14" width="60" height="57.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="60" id="5BB-9F-QYl"/>
                                                         <constraint firstAttribute="width" constant="60" id="TAX-qC-2He"/>
@@ -187,6 +187,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="person" catalog="system" width="128" height="117"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
